8172434: CompareAndExchangeObject inserts two pre-barriers

Reviewed-by: kvn